login and urls protected

--- a/templates/admin/login-admin.html
+++ b/templates/admin/login-admin.html
@@ -59,6 +59,8 @@
         <label for="psw"><b>Contraseña</b></label>
         <input type="password" placeholder="Ingresa contraseña" name="psw" required>
 
+        <input type="hidden" name="role" value="admin">
+
         <button type="submit" class="login-button">Entrar</button>
       </div>
     </form>
