--- a/templates/alumnxs/login-alumnxs.html
+++ b/templates/alumnxs/login-alumnxs.html
@@ -59,6 +59,8 @@
         <label for="psw"><b>Contraseña</b></label>
         <input type="password" placeholder="Ingresa contraseña" name="psw" required>
 
+        <input type="hidden" name="role" value="alumnx">
+
         <button type="submit" class="login-button">Entrar</button>
         <span class="psw">¿Olvidó su <a href="#">contraseña</a>?</span>
       </div>
