--- a/templates/teachers/login-teachers.html
+++ b/templates/teachers/login-teachers.html
@@ -58,6 +58,8 @@
         <label for="psw"><b>Contraseña</b></label>
         <input type="password" placeholder="Ingresa contraseña" name="psw" required>
 
+        <input type="hidden" name="role" value="docente">
+
         <button type="submit" class="login-button">Entrar</button>
         <span class="psw">¿Olvidó su <a href="#">contraseña</a>?</span>
       </div>
