--- a/templates/admin/login-admin.html
+++ b/templates/admin/login-admin.html
@@ -23,12 +23,14 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
+            <a href="{{ url_for('index') }}">
             <div class="logo"><img src="../../static/css/img/admin-icon.png" width="40" height="60">
             Evaluación Docente
             </div>
+            </a>
             <ul class="nav-links">
                 <li><a href="/">Cambiar tipo de usuarix</a></li>
-                <li><a href="footer">Contacto</a></li>
+                <li><a href="preguntas.html">Preguntas frecuentes</a></li>
             </ul>
         </div>
     </nav>
@@ -37,7 +39,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-nav-links">
           <li><a href="/">Cambiar tipo de usuarix</a></li>
-          <li><a href="#footer">Contacto</a></li>
+          <li><a href="preguntas.html">Preguntas frecuentes</a></li>
         </ul>
     </div>
 
