--- a/templates/alumnxs/inicio-alumnxs.html
+++ b/templates/alumnxs/inicio-alumnxs.html
@@ -90,11 +90,17 @@
 {% endfor %}
 
 </section>
-
 <!-- Footer -->
   <footer class="footer">
      <div class="container">
       <div class="row">
+        <div class="footer-col">
+          <h4>Evaluación Docente</h4>
+          <ul>
+            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
+
+          </ul>
+        </div>
         <div class="footer-col">
           <h4>Contáctanos</h4>
           <ul>
