--- a/templates/admin/inicio-admin.html
+++ b/templates/admin/inicio-admin.html
@@ -31,6 +31,7 @@
           </a>
             <ul class="nav-links">
                 <li><a href="{{ url_for('logout') }}">Cerrar sesión</a></li>
+                <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
 
             </ul>
         </div>
@@ -40,9 +41,11 @@
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-nav-links">
             <li><a href="{{ url_for('logout') }}">Cerrar sesión</a></li>
+            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
         </ul>
     </div>
 
+<div id="toast-container"></div>
 <div id="toast-container"></div>
 
 <!-- Sección de inicio / Bienvenida -->
@@ -85,6 +88,8 @@
   <button id="btn-open-add" class="btn-primary">Agregar usuario</button>
 </div>
 </section>
+
+
 <div id="user-modal" class="modal">
   <div class="modal-content">
     <h3 id="modal-title">Agregar usuario</h3>
@@ -99,13 +104,38 @@
         <input name="matricula" id="user-matricula" required>
       </label>
 
-      <label>Rol
-        <select name="role" id="user-role" required>
-          <option value="alumnx">alumnx</option>
-          <option value="docente">docente</option>
-          <option value="admin">admin</option>
-        </select>
-      </label>
+<label>Rol:
+  <select id="user-role" name="role" required>
+    <option value="">Selecciona rol</option>
+    <option value="alumnx">Alumnx</option>
+    <option value="docente">Docente</option>
+    <option value="admin">Admin</option>
+  </select>
+</label>
+
+<div id="alumnx-options" style="display:none;">
+  <label>Grupo:
+    <select id="alumnx-grupo" name="alumnx_grupo">
+      {% for g in grupos %}
+        <option value="{{ g.id }}">{{ g.name }}</option>
+      {% endfor %}
+    </select>
+  </label>
+</div>
+
+<div id="docente-options" style="display:none;">
+  <label>Materias impartidas:</label>
+
+  {% for m in materias %}
+    <label class="checkbox-item">
+      <input type="checkbox" name="docente_materias" value="{{ m.id }}">
+      {{ m.name }}
+    </label>
+  {% endfor %}
+</div>
+
+
+
 
       <label>Contraseña
         <input type="password" id="user-password" name="password" placeholder="Dejar vacío si no hay cambios">
@@ -166,11 +196,17 @@
 
 
 
-
 <!-- Footer -->
   <footer class="footer">
      <div class="container">
       <div class="row">
+        <div class="footer-col">
+          <h4>Evaluación Docente</h4>
+          <ul>
+            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
+
+          </ul>
+        </div>
         <div class="footer-col">
           <h4>Contáctanos</h4>
           <ul>
@@ -189,7 +225,6 @@
       </div>
      </div>
   </footer>
-
 
 <script src="{{ url_for('static', filename='js/dashboard-admin.js') }}"></script>
 <script src="{{ url_for('static', filename='js/dashboard-materias.js') }}"></script>
