--- a/templates/alumnxs/encuesta.html
+++ b/templates/alumnxs/encuesta.html
@@ -80,11 +80,17 @@
     </div>
   </form>
 </section>
-
 <!-- Footer -->
   <footer class="footer">
      <div class="container">
       <div class="row">
+        <div class="footer-col">
+          <h4>Evaluación Docente</h4>
+          <ul>
+            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
+
+          </ul>
+        </div>
         <div class="footer-col">
           <h4>Contáctanos</h4>
           <ul>
@@ -103,5 +109,6 @@
       </div>
      </div>
   </footer>
+  
 </body>
 </html>
