--- a/templates/preguntas-freq.html
+++ b/templates/preguntas-freq.html
@@ -139,15 +139,16 @@
     <div class="question-card">
       <label class="question" name="question"">¿Cómo edito la información de un usuario?</label>
       <div class="answer">
-      aa
+      La última columna de la tabla de usuarios registrados llamada "Acciones" contiene dos botones, uno para borrar el usuario y otro para editarlo, solo se debe dar click en el botón "Editar"
         <div class="example-image">
           <img src="../static/css/img/edit-user-button-example.png" class="example">
         </div>
-        Y 
+      Llenar el formulario con los datos que desean ser cambiados, dejando los que se quedarán intactos sin llenar y presionar en el botón "Guardar"
         <div class="example-image">
           <img src="../static/css/img/edit-user-form-example.png" class="example">
         </div>
-        Por último
+      Al terminar volverá al panel inicial acompañado de una notificación de "Usuario editado exitosamente."
+      Nota: EL TIPO DE USUARIO NO PUEDE EDITARSE UNA VEZ REGISTRADO.
       </div>
     </div>
 
@@ -183,24 +184,7 @@
       </div>
   </div>
 
-  <div class="question-card">
-      <label class="question" name="question"">¿Cómo agrego una nueva materia?</label>
-      <div class="answer">
-        boton
-        <div class="example-image">
-          <img src="../static/css/img/add-button-example.png" class="example">
-        </div>
-        form
-        <div class="example-image">
-          <img src="../static/css/img/add-user-form-example.png" class="example">
-        </div>
-        succes
-        <div class="example-image">
-          <img src="../static/css/img/succes-adding-example.png" class="example">
-        </div>
-      </div>
-  </div>
-
+  
   <div class="question-card">
       <label class="question" name="question"">¿Cómo descargo un archivo PDF con las respuestas registradas?</label>
       <div class="answer">
