--- a/templates/teachers/login-teachers.html
+++ b/templates/teachers/login-teachers.html
@@ -29,7 +29,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="/">Cambiar tipo de usuarix</a></li>
-                <li><a href="preguntas.html">Preguntas frecuentes</a></li>
+                <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
             </ul>
         </div>
     </nav>
@@ -38,7 +38,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-nav-links">
           <li><a href="/">Cambiar tipo de usuarix</a></li>
-          <li><a href="preguntas.html">Preguntas frecuentes</a>/li>
+          <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
         </ul>
     </div>
 
