--- a/templates/preguntas-freq.html
+++ b/templates/preguntas-freq.html
@@ -148,6 +148,9 @@
           <img src="../static/css/img/edit-user-form-example.png" class="example">
         </div>
       Al terminar volverá al panel inicial acompañado de una notificación de "Usuario editado exitosamente."
+      <div class="example-image">
+          <img src="../static/css/img/user-edited-example.png" class="example">
+        </div>
       Nota: EL TIPO DE USUARIO NO PUEDE EDITARSE UNA VEZ REGISTRADO.
       </div>
     </div>
@@ -155,13 +158,17 @@
     <div class="question-card">
       <label class="question" name="question"">¿Cómo elimino un usuario?</label>
       <div class="answer">
-        lalal
+        En la última columna de la tabla de usuarios registrados llamada "Acciones" contiene dos botones, uno para borrar el usuario y otro para editarlo, solo se debe dar click en el botón "Borrar"
         <div class="example-image">
           <img src="../static/css/img/delete-user-button-example.png" class="example">
         </div>
-        lalala esta seguro?
+        Y confirmar que desea eliminar el usuario en la notificación que aparecerá en la esquina derecha de la pantalla, oprimiendo en "Eliminar"
         <div class="example-image">
-          <img src="../static/css/img/succes-deleting-example.png" class="example">
+          <img src="../static/css/img/confirm-delete-example.png" class="example">
+        </div>
+        Así, volverá al panel inicial acompañado de una notificación de "Usuario editado exitosamente."
+        <div class="example-image">
+          <img src="../static/css/img/deleted-user-example.png" class="example">
         </div>
       </div>
  </div>
@@ -169,15 +176,15 @@
     <div class="question-card">
       <label class="question" name="question"">¿Cómo agrego un nuevo usuario?</label>
       <div class="answer">
-        boton
+        Al final de la tabla de usuarios registrado podrá observar un botón llamado "Agregar usuario", solo hace falta hacer click sobre él
         <div class="example-image">
           <img src="../static/css/img/add-button-example.png" class="example">
         </div>
-        form
+        A continuación debe llenar el formulario según el tipo de usuario y oprimir en el botón "Guardar".
         <div class="example-image">
           <img src="../static/css/img/add-user-form-example.png" class="example">
         </div>
-        succes
+        Una vez enviado, volverá al panel inicial acompañado de una notificación de "Usuario creado exitosamente."
         <div class="example-image">
           <img src="../static/css/img/succes-adding-example.png" class="example">
         </div>
