--- a/templates/admin/inicio-admin.html
+++ b/templates/admin/inicio-admin.html
@@ -156,6 +156,7 @@
         <th>Materia</th>
         <th>Docentes</th>
         <th>Grupos</th>
+        <th>Acciones</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -169,7 +170,7 @@
 
 <div id="materia-modal" class="modal">
   <div class="modal-content">
-    <h3 id="modal-title">Agregar materia</h3>
+    <h3 id="materia-modal-title">test</h3>
     <form id="materia-form">
       <input type="hidden" name="id" id="materia-id">
 
@@ -213,10 +214,7 @@
 <table id="responses-table">
   <thead>
     <tr>
-      <th>Resp ID</th>
-      <th>Form ID</th>
-      <th>Form</th>
-      <th>Alumno ID</th>
+      <th>Nombre del Form</th>
       <th>Alumno</th>
       <th>Fecha</th>
       <th>Respuestas</th>
