--- a/templates/alumnxs/preguntas-al.html
+++ b/templates/alumnxs/preguntas-al.html
@@ -47,92 +47,52 @@
     </div>
 
 
-<!-- Sección de inicio / Bienvenida -->
+<section class="welcome-section">
 
-  <section id="users" class="users">
-    <p class="outlined-text">Preguntas Frecuentes</p>
-    <div class="users-grid">
+  <div class="welcome-textBox">
+    <h2 class="welcome-text">Preguntas Frecuentes</h2>
+  </div>
 
-        <div class="users-item">
-          <a href="/alumnxs/preguntas-al">
-            
-            <div class="users-image"></div>
-            <div class="users-content">
-              <h4>Alumnx</h4> 
-            </div>
-          </a>     
-        </div>
+  <div class="welcome-image">
+    <img src="../../static/css/img/alumnx-icon.png" class="avatar">
+  </div>
+</section>
 
-        <div class="users-item">
-          <a href="/teachers/preguntas-doc">
-            <div class="users-image"></div>
-            <div class="users-content">
-              <h4>Docente</h4> 
-            </div>
-          </a>     
-        </div>
-
-        <div class="users-item">
-          <a href="/admin/preguntas-ad">
-            <div class="users-image"></div>
-            <div class="users-content">
-              <h4>Admin</h4> 
-            </div>
-          </a>     
-        </div>
-    </div>
-  </section>
 
 
 <section class="all-questions-section">
     
   <div class="user-type-text">
-    <h2>Generales</h2>
+    <h2>Tipo de ususario: Alumnx</h2>
   </div>
 
   <div class="user-questions">
     
     <div class="question-card">
-      <label class="question" name="question"">¿Cómo inicio sesión?</label>
+      <label class="question" name="question"">¿Cómo contesto encuestas?</label>
       <div class="answer">
-        Es necesario seleccionar el tipo de ususario que eres desde la página de inicio
+        Al iniciar sesión con tu matrícula y contraseña correctamente, deben aparecer los formularios disponibles para que contestes, sea de los profesores que te imparten una materia, o de la materia misma, por ejemplo:
         <div class="example-image">
-          <img src="../static/css/img/landing-example.png" class="example">
+          <img src="../static/css/img/avail-forms-example.png" class="example">
         </div>
-        Ingresar tu matrícula y contraseña en el formulario
-        <div class="example-image">
-          <img src="../static/css/img/login-example.png" class="example">
-        </div>
-        Y automáticamente se te redirigirá a tu dashboard correspondiente.
-        <div class="example-image">
-          <img src="../static/css/img/dashboard-example.png" class="example">
-        </div>
+        Solo necesitas oprimir el botón "Contestar" en cada encuesta disponible y se redirigirá al cuestionario completo.
       </div>
     </div>
 
     <div class="question-card">
-      <label class="question" name="question"">¿Cómo cierro sesión?</label>
+      <label class="question" name="question"">¿Cómo envío una encuesta si ya contesté todas las preguntas?</label>
       <div class="answer">
-        Desde tu dashboard, podrás observar una opción en la esqeuina superior izquierda llamada "Cerrar sesión"
+        Presionaste en "Contestar", se abrió el formulario y has contestado las preguntas, para enviar y registrar tu respuesta, debes oprimir el botón "Enviar encuesta" al final de todas las preguntas.
         <div class="example-image">
-          <img src="../static/css/img/logout-example.png" class="example">
+          <img src="../static/css/img/send-form-example.png" class="example">
         </div>
-        Al hacer click en ella tu sesión estará cerrada con seguridad y se te redirigirá a la página inicial del sistema.
+        En caso de no haber contestado una de las preguntas, no podrás enviar tus respuestas, ¡Asegúrate de contestar todo! 
+        Al contestar, se te redirigirá al inicio junto con un mensaje de "Encuesta enviada correctamente", así podrás contestar todas las encuestas disponibles que resten.
+      <div class="example-image">
+          <img src="../static/css/img/sended-alert-example.png" class="example">
+        </div>
       </div>
-  </div>
 
-   <div class="question-card">
-      <label class="question" name="question"">¿Cómo recupero mi contraseña?</label>
-      <div class="answer">
-        En el formulario que debe rellenar para iniciar sesión hay una pregunta "¿Olvidó su contraseña?"
-        <div class="example-image">
-          <img src="../static/css/img/forgot-password.png" class="example">
-        </div>
-        Al hacer click en "contraseña" se le redirigirá para el envío de un correo al Administrador solicitando un cambio de contraseña, solo debe indicar su martícula en el cuerpo del correo, se verá como:
-        <div class="example-image">
-          <img src="../static/css/img/getpsswback-example.png" class="example">
-        </div>
-      </div>
   </div>
 
 </section>
