--- a/templates/admin/inicio-admin.html
+++ b/templates/admin/inicio-admin.html
@@ -248,13 +248,28 @@
 
 <section class="respuestas-dashboard">
   <h2>Respuestas de Encuestas</h2>
+
  <div class="filters">
-  <input type="text" id="filtro-form" placeholder="Nombre del formulario">
-  <input type="text" id="filtro-alumno" placeholder="Nombre del alumno">
-  <input type="date" id="filtro-fecha">
+
+    <select id="filtro-form">
+    <option value="">Todos los formularios</option>
+    {% for f in forms %}
+      <option value="{{ f.id }}">{{ f.name }}</option>
+    {% endfor %}
+  </select>
+
+  <select id="filtro-alumnx">
+    <option value="">Todos lxs alumnxs</option>
+    {% for a in alumnxs %}
+      <option value="{{ a.id }}">{{ a.name }}</option>
+    {% endfor %}
+  </select>
+
+  <input type="month" id="filtro-fecha">
   <button id="btn-filtrar-respuestas">Filtrar</button>
   <button id="btn-reset-respuestas">Reset</button>
 </div> 
+
 <table id="responses-table">
   <thead>
     <tr>
